--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4220,25 +4220,25 @@ img.img-gray:hover,
 
 /*img-rotate*/
 
-img.img-rotate,
-.img-rotate img {
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
-}
+/* img.img-rotate, */
+/* .img-rotate img { */
+  /* -webkit-transition: -webkit-transform 0.3s ease; */
+  /* transition: -webkit-transform 0.3s ease; */
+  /* transition: transform 0.3s ease; */
+  /* transition: transform 0.3s ease, -webkit-transform 0.3s ease; */
+/* } */
 
-img.img-rotate:hover,
-.img-rotate:hover img {
-  transform: rotate(360deg);
-  -ms-transform: rotate(360deg);
-  /* IE 9 */
-  -moz-transform: rotate(360deg);
-  /* Firefox */
-  -webkit-transform: rotate(360deg);
-  /* Safari and Chrome */
-  -o-transform: rotate(360deg);
-}
+/* img.img-rotate:hover, */
+/* .img-rotate:hover img { */
+  /* transform: rotate(360deg); */
+  /* -ms-transform: rotate(360deg); */
+  IE 9
+  /* -moz-transform: rotate(360deg); */
+  Firefox
+  /* -webkit-transform: rotate(360deg); */
+  Safari and Chrome
+  /* -o-transform: rotate(360deg); */
+/* } */
 
 /*img-burn*/
 
@@ -4748,8 +4748,8 @@ a.label:focus {
   font-size: 18px;
   line-height: 32px;
   height: 64px;
-  word-break: break-all !important;
-  word-wrap: break-word !important;
+  /* word-break: break-all !important; */
+  /* word-wrap: break-word !important; */
 }
 
 .panel-body {
@@ -5848,8 +5848,8 @@ body.no-sidebar .sidebar {
 }
 
 #avatar {
-  width: 64px;
-  height: 64px;
+  width: 120px;
+  height: 120px;
   display: inline-block;
 }
 
@@ -6526,7 +6526,7 @@ body.no-sidebar .sidebar {
 }
 
 .article-list .article-title {
-  font-size: 18px;
+  font-size: 24px;
 }
 
 .article-toc .toc-title {
@@ -6665,7 +6665,8 @@ body.okayNav-loaded {
 
 .okayNav__nav--visible {
   overflow: hidden;
-  white-space: nowrap;
+  white-space: normal;
+  
 }
 
 .okayNav__nav--visible li {
@@ -6674,7 +6675,7 @@ body.okayNav-loaded {
 }
 
 .okayNav__nav--visible li:first-child {
-  margin-left: 0;
+  margin-left: 15px;
 }
 
 .okayNav__nav--visible a {
@@ -9349,6 +9350,7 @@ body.okayNav-loaded {
 
   img {
     max-width: 100% !important;
+)
   }
 
   p,
