hyphen to pipe in the title - will it fix to load existing comments from hexo blog?

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -41,7 +41,7 @@ content="{{ range $index, $element := .Site.Params.keywords }}{{ $element | safe
 <meta name="generator" content="Hugo {{ .Site.Hugo.Version }} with theme pure" />
 <title>
 {{- block "title" . -}}
-{{ if .IsPage }}{{ .Title }} - {{ .Site.Title }}{{ else }}{{ .Site.Title }}{{ end }}
+{{ if .IsPage }}{{ .Title }} | {{ .Site.Title }}{{ else }}{{ .Site.Title }}{{ end }}
 {{- end -}}
 </title>
 <!-- Canonical links -->
