--- a/layouts/partials/_script/comment.html
+++ b/layouts/partials/_script/comment.html
@@ -25,7 +25,7 @@
 <script>
     var disqus_config = function () {
         this.page.url = '{{- .Permalink }}';
-        this.page.identifier = '{{- $comment.disqus }}';
+        this.page.identifier = '{{- .RelPermalink }}';
     };
     (function () {
         var d = document, s = d.createElement('script');
